# daisy-rsx

./: Cargo.toml  Justfile  LICENSE  PROMPT.md  README.md  release.toml
.agents/skills/marketing-site-builder/assets/starter-from-bionic-gpt/assets/: brand-replacement-checklist.txt
.agents/skills/marketing-site-builder/assets/starter-from-bionic-gpt/src/: ui_links.rs.template
.agents/skills/marketing-site-builder/references/: new-site-checklist.md  prompt-adaptation.md  site-playbooks.md  site-spec-json.md
.agents/skills/marketing-site-builder/references/broken-link-baselines/: deploy-mcp.txt
.agents/skills/ssg-whiz-new-article/: SKILL.md
.agents/skills/static-site/: SKILL.md
.agents/skills/static-site/assets/minimal-site-template/: Cargo.toml  cloudflare-build.sh  input.css
.agents/skills/static-site/assets/minimal-site-template/assets/: copy-paste.js  goat-counter.js
.agents/skills/static-site/assets/minimal-site-template/src/: blog_summary.rs  generator.rs  main.rs  ui_links.rs
.agents/skills/static-site/scripts/: new_static_site.sh
.codex/skills/marketing-site-builder/: SKILL.md
.codex/skills/marketing-site-builder/agents/: openai.yaml
.codex/skills/marketing-site-builder/references/: architecture-map.md
.codex/skills/marketing-site-builder/references/broken-link-baselines/: bionic-gpt.txt  decision.txt
.codex/skills/marketing-site-builder/scripts/: check_shared_impact.sh  new_site_from_baseline.sh  validate_site.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  layout.kdl
.github/workflows/: publish.yaml  release.yml
crates/bionic-gpt/: Cargo.toml  cloudflare-build.sh  input.css
crates/bionic-gpt/content/architect-course/: index.md
crates/bionic-gpt/content/architect-course/025-agent-primitives/: index.md
crates/bionic-gpt/content/architect-course/025-agent-runtime/: index.md
crates/bionic-gpt/content/architect-course/050-ai-ops/install-linux/: index.md
crates/bionic-gpt/src/: architect_course_summary.rs  generator.rs  lib.rs  main.rs  site_header.rs  ui_links.rs
crates/bionic-gpt/src/layouts/: blog.rs  docs.rs  layout.rs  pages.rs
crates/bionic-gpt/src/pages/: contact.rs  home.rs  partners.rs  pricing.rs
crates/bionic-gpt/src/pages/product/: assistants.rs  automations.rs  chat.rs  developers.rs  integrations.rs
crates/bionic-gpt/src/pages/solutions/: education.rs  support.rs
crates/daisy_rsx/: Cargo.toml
crates/daisy_rsx/src/: accordian.rs  alert.rs  app_layout.rs  avatar.rs  badge.rs  blank_slate.rs  breadcrumb.rs  button.rs  card.rs  check_box.rs  drawer.rs  input.rs  lib.rs  modal.rs  nav_item.rs  range.rs  relative_time.rs  select.rs  tab_container.rs  timeline.rs
crates/daisy_rsx/src/marketing/: footer.rs  landing_page.rs  landing_spec.rs  mod.rs  motion.rs  navigation.rs  problem_solution.rs  quad_feature.rs  split_video_hero.rs  theme.rs
crates/daisy_rsx/src/marketing/themes/: decision_luxe.css
crates/decision/: Cargo.toml  cloudflare-build.sh  input.css
crates/decision/content/blog/confidential-compute/: index.md
crates/decision/src/: blog_summary.rs  generator.rs  main.rs  pages_summary.rs  ui_links.rs
crates/decision/src/pages/: contact.rs  index.rs  index_luxe.css  index_luxe.js  mod.rs
crates/deploy-mcp/: Cargo.toml  cloudflare-build.sh  input.css
crates/deploy-mcp/src/: generator.rs  main.rs  ui_links.rs
crates/deploy-mcp/src/pages/: contact.rs  enterprise.rs  home.rs  mcp_servers.rs  pricing.rs
crates/ssg_whiz/: Cargo.toml  README.md
crates/ssg_whiz/css/: content.css  navigation.css
crates/ssg_whiz/src/: builder.rs  lib.rs  summaries.rs
crates/ssg_whiz/src/layouts/: blog.rs  docs.rs  layout.rs  mod.rs  pages.rs
crates/ssg_whiz/src/marketing/: extra_footer.rs  footer.rs  mod.rs  navigation.rs  site_header.rs
src/: alert.rs  app_layout.rs  avatar.rs  blank_slate.rs  button.rs  card.rs  check_box.rs  drawer.rs  drop_down.rs  fieldset.rs  file_input.rs  input.rs  label.rs  lib.rs  modal.rs  nav_item.rs  pagination.rs  range.rs  relative_time.rs  select.rs  tab_container.rs  text_area.rs  time_line.rs  timeline.rs  tooltip.rs
src/marketing/: footer.rs  hero.rs  image_hero.rs  mod.rs  video_hero.rs
(+31 files in other folders)
