[package]
name = "ssg_whiz"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/bionic-gpt/daisy-rsx"
homepage = "https://github.com/bionic-gpt/daisy-rsx"

description = "Static site generation orchestration utilities."

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tower-livereload = { workspace = true }
tracing = { workspace = true }
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
image = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
